--- a/builder-config.yaml
+++ b/builder-config.yaml
@@ -8,6 +8,8 @@ exporters:
       go.opentelemetry.io/collector/exporter/debugexporter v0.118.0
   - gomod:
       go.opentelemetry.io/collector/exporter/otlpexporter v0.118.0
+  - gomod:
+      github.com/syron/nodiniteexporter
 
 processors:
   - gomod:
